# energy-forecast-service

./: pyproject.toml  start.sh
app/: main.py
src/app/: main.py
src/app/core/: model.py
src/app/utils/: feature_engineering.py
src/frontend/: app.py
