[tool.poetry]
name = "enefit-forecast-service"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13.11"

[tool.poetry.group.web.dependencies]
fastapi = "^0.128.0"
streamlit = "^1.53.0"
requests = "^2.32.5"
uvicorn = "^0.40.0"
pydantic = "^2.12.5"

[tool.poetry.group.git.dependencies]
nb-clean = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
